<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="app_name">Poker</string>
    <string name="num_of_cards">Number of cards to deal: </string>
    <string name="bribes">Number of ordered bribes</string>
    <string name="real_bribes">Number of bribes taken</string>
    <string name="gamers">Number of gamers</string>
    <string name="max_bribes">Max number of bribes</string>
    <string name="left_bribes">Bribes that left: </string>
    <string name="more_bribes">More bribes than there are</string>
    <string name="start">Start</string>
    <string name="start_new_game">Start new game?</string>
    <string name="menu">Menu</string>
    <string name="game_over">Game over</string>
    <string name="score">Score</string>
    <string name="full_score">Full table of score</string>
    <string name="add">Add score</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="settings">Settings</string>
    <string name="sure">Are you sure?</string>
    <string name="go_to_menu">Open menu?</string>
    <string name="progress_save">Progress will be saved</string>
    <string name="exit">Exit app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="number">№</string>
    <string name="not_equal">Took bribes are calculated incorrectly</string>
    <string name="gamer1">Gamer 1</string>
    <string name="gamer2">Gamer 2</string>
    <string name="gamer3">Gamer 3</string>
    <string name="gamer4">Gamer 4</string>
    <string name="gamer5">Gamer 5</string>
    <string name="gamer6">Gamer 6</string>-->
    <string name="app_name">Poker</string>
    <string name="num_of_cards">Карт в раздаче: </string>
    <string name="bribes">Количество заказанных взяток</string>
    <string name="real_bribes">Количество взятых взяток</string>
    <string name="gamers">Количество игроков</string>
    <string name="max_bribes">Максимальное количество взяток</string>
    <string name="left_bribes">Количество оставшихся взяток: </string>
    <string name="more_bribes">Взяток больше чем есть</string>
    <string name="start">Начать</string>
    <string name="start_new_game">Начать новую игру?</string>
    <string name="game_over">Игра окончена</string>
    <string name="menu">Меню</string>
    <string name="score">Счёт</string>
    <string name="full_score">Полный счет</string>
    <string name="add">Добавить к счету</string>
    <string name="new_game">Новая игра</string>
    <string name="continue_game">Продолжить</string>
    <string name="settings">Настройки</string>
    <string name="sure">Вы уверенны?</string>
    <string name="go_to_menu">Выйти в меню?</string>
    <string name="progress_save">Весь прогресс будет сохранен</string>
    <string name="exit">Выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">ОК</string>
    <string name="number">№</string>
    <string name="not_equal">Неправильно посчитаны взятые взятки</string>
    <string name="gamer1">Игрок 1</string>
    <string name="gamer2">Игрок 2</string>
    <string name="gamer3">Игрок 3</string>
    <string name="gamer4">Игрок 4</string>
    <string name="gamer5">Игрок 5</string>
    <string name="gamer6">Игрок 6</string>
</resources>