<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/new_game"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/gamers"
        android:textSize="24sp" />

    <it.sephiroth.android.library.numberpicker.NumberPicker
        android:id="@+id/numberOfGamers"
        style="@style/NumberPicker.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:gravity="center"
        android:progress="2"
        app:picker_max="6"
        app:picker_min="2"
        app:picker_orientation="vertical"
        app:picker_stepSize="1"
        app:picker_tracker="exponential">

    </it.sephiroth.android.library.numberpicker.NumberPicker>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/max_bribes"
        android:textSize="24sp" />

    <it.sephiroth.android.library.numberpicker.NumberPicker
        android:id="@+id/maxNumberOfBribes"
        style="@style/NumberPicker.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:gravity="center"
        android:progress="5"
        app:picker_max="16"
        app:picker_min="5"
        app:picker_orientation="vertical"
        app:picker_stepSize="1"
        app:picker_tracker="exponential">

    </it.sephiroth.android.library.numberpicker.NumberPicker>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"
        android:onClick="onNewClick"
        android:text="@string/start"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:onClick="onMenuClick"
        android:text="@string/menu"
        android:textSize="20sp" />
</LinearLayout>