<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".game.Activity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="30sp"
            android:layout_weight="1"
            android:background="@drawable/main_player"
            android:hint="@string/gamer1"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="30sp"
            android:layout_weight="1"
            android:background="@drawable/player"
            android:hint="@string/gamer2"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/bribes"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <it.sephiroth.android.library.numberpicker.NumberPicker
            android:id="@+id/numberOfBribe"
            style="@style/NumberPicker.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="6sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="6sp"
            android:layout_weight="1"
            android:gravity="center"
            android:progress="0"
            app:picker_max="0"
            app:picker_min="0"
            app:picker_orientation="vertical"
            app:picker_stepSize="1"
            app:picker_tracker="exponential">

        </it.sephiroth.android.library.numberpicker.NumberPicker>

        <it.sephiroth.android.library.numberpicker.NumberPicker
            android:id="@+id/numberOfBribe2"
            style="@style/NumberPicker.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="6sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="6sp"
            android:layout_weight="1"
            android:gravity="center"
            android:progress="0"
            app:picker_max="0"
            app:picker_min="0"
            app:picker_orientation="vertical"
            app:picker_stepSize="1"
            app:picker_tracker="exponential">

        </it.sephiroth.android.library.numberpicker.NumberPicker>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/real_bribes"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <it.sephiroth.android.library.numberpicker.NumberPicker
            android:id="@+id/numberOfRealBribe"
            style="@style/NumberPicker.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="6sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="6sp"
            android:layout_weight="1"
            android:gravity="center"
            android:progress="0"
            app:picker_max="0"
            app:picker_min="0"
            app:picker_orientation="vertical"
            app:picker_stepSize="1"
            app:picker_tracker="exponential">

        </it.sephiroth.android.library.numberpicker.NumberPicker>

        <it.sephiroth.android.library.numberpicker.NumberPicker
            android:id="@+id/numberOfRealBribe2"
            style="@style/NumberPicker.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="6sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="6sp"
            android:layout_weight="1"
            android:gravity="center"
            android:progress="0"
            app:picker_max="0"
            app:picker_min="0"
            app:picker_orientation="vertical"
            app:picker_stepSize="1"
            app:picker_tracker="exponential">

        </it.sephiroth.android.library.numberpicker.NumberPicker>

    </LinearLayout>

    <TextView
        android:id="@+id/number_of_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/num_of_cards" />

    <TextView
        android:id="@+id/numberBribesCouldTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/left_bribes" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:onClick="onAddClick"
        android:text="@string/add"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:onClick="onScoreClick"
        android:text="@string/full_score"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:onClick="onMenuClick"
        android:text="@string/menu"
        android:textSize="18sp" />


</LinearLayout>